tests/snapshots/crash_adopt_command__recover_finishing_an_adopt.snap
---
source: tests/crash_adopt_command.rs
expression: "common::undate(&common::redact(&String::from_utf8_lossy(&out.stdout), &m.f))"
---
recover: an interrupted adopt into profile `mine` (<TS>)

observed:
  new            <HOME>/.config/hypr

direction: forward — the link is already in place, so finishing is the only outcome that does not
           undo something already in effect. what remains is moving your directory into
           the attic, where it stays readable.

would apply 3 operation(s):
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/<TS>

nothing has been changed. re-run with --commit to carry this out.

with --commit it then records what the interrupted adopt did not get to: the new generation,
the ledger rows that make the new links ricepilot's, and `rescue.sh` — before the journal
is retired.
